# drop_api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  Shuttle.toml  fly.toml
.cargo/: config.toml
.github/workflows/: deploy.yml  fly.yml
configuration/: base.yaml  example.secret.yaml
src/: configuration.rs  ctx.rs  database.rs  error.rs  log.rs  main.rs  model.rs
src/model/: base.rs  mod.rs  model_podcast.rs  model_subscribe.rs
src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_podcast.rs  routes_pordcast.rs  routes_subscribe.rs  routes_ticket.rs
test/: quick_dev.rs
tests/: quick_dev.rs
