[package]
name = "drop_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio  = { version = "1.29.1", features = ["full"] }
axum = { version = "0.6", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "2"
tower-http = { version = "0.4", features = ["fs", "cors"] }
tower-cookies = "0.9"
lazy-regex = "2"
async-trait = "0.1"
strum_macros = "0.25.2"
uuid = { version = "1", features = ["v4", "fast-rng",]}
postgrest = "1.0"
chrono = { version = "0.4", features = ["serde"] }
secrecy = { version = "0.8.0", features = ["serde"] }
rss = "2"
reqwest = "0.11.20"
config = "0.13.3"
shuttle-runtime = "0.29.0"
shuttle-axum = "0.29.0"
shuttle-secrets = "0.29.0"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.5"
